--- a/index.html
+++ b/index.html
@@ -6,33 +6,29 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindo à Minha Página Pessoal</h1>
+        <h1>Bem-vindo</h1>
     </header>
     <section>
         <h2>Sobre Mim</h2>
         <div class="sobre-mim-conteudo">
             <img src="minha-foto.jpg" alt="Minha Foto">
-            <p>Meu nome é [Seu Nome]. Lorem ipsum dolor sit amet. 
-                Ut magni consequatur aut dolor voluptas eum voluptatem 
-                ratione est aliquid debitis et cumque tempora et possimus 
-                quia ab consequatur nisi. Non omnis ipsum sed consequatur 
-                consequatur eum minus officia ea architecto accusantium ut 
-                sunt iste. Vel mollitia delectus ut praesentium quis id nulla galisum.</p>
+            <p>Meu nome é [yuri]. tenho 17 anos, gosto de passar o tempo jogando jogo no meu
+                pc, n gosto de sair muito, sou bem caseiro.</p>
         </div>
     </section>
     <section>
         <h2>Meus Hobbies</h2>
         <ul>
-            <li>Leitura</li>
-            <li>Esportes</li>
+            <li>games</li>
+            <li>basquete</li>
             <li>Programação</li>
         </ul>
     </section>
     <section>
         <h2>Minhas Disciplinas Favoritas</h2>
         <ul>
-            <li>Matemática</li>
-            <li>Física</li>
+            <li>ingles</li>
+            <li>biologia</li>
             <li>História</li>
         </ul>
     </section>
@@ -53,7 +49,7 @@
         </ul>
     </section>
     <footer>
-        <p>Entre em contato: <a href="mailto:meuemail@example.com">meuemail@example.com</a></p>
+        <p>Entre em contato: <a href="yuri.cezar@escola.pr.gov.br">meuemail@example.com</a></p>
     </footer>
 </body>
 </html>
